# gporca

./: .clang-format  CMakeLists.txt
libgpopt/: CMakeLists.txt
libgpopt/include/gpopt/: exception.h  init.h  spinlock.h
libgpopt/src/: exception.cpp  init.cpp
libgpopt/src/base/: CAutoOptCtxt.cpp  CCTEInfo.cpp  CCTEMap.cpp  CCTEReq.cpp  CCastUtils.cpp  CColConstraintsArrayMapper.cpp  CColConstraintsHashMapper.cpp  CColRef.cpp  CColRefComputed.cpp  CColRefSet.cpp  CColRefSetIter.cpp  CColRefTable.cpp  CColumnFactory.cpp  CConstraint.cpp  CConstraintConjunction.cpp  CConstraintDisjunction.cpp  CConstraintInterval.cpp  CConstraintNegation.cpp  CCostContext.cpp  CDatumSortedSet.cpp  CDefaultComparator.cpp  CDistributionSpecExternal.cpp  CDistributionSpecHashed.cpp  CDistributionSpecHashedNoOp.cpp  CDistributionSpecNonSingleton.cpp  CDistributionSpecRandom.cpp  CDistributionSpecReplicated.cpp  CDistributionSpecRouted.cpp  CDistributionSpecSingleton.cpp  CDistributionSpecStrictHashed.cpp  CDistributionSpecStrictRandom.cpp  CDistributionSpecStrictSingleton.cpp  CDistributionSpecUniversal.cpp  CDrvdProp.cpp  CDrvdPropCtxt.cpp  CDrvdPropCtxtPlan.cpp  CDrvdPropPlan.cpp  CDrvdPropRelational.cpp  CDrvdPropScalar.cpp  CEnfdDistribution.cpp  (+27 more)
libgpopt/src/engine/: CEngine.cpp  CEnumeratorConfig.cpp  CPartialPlan.cpp  CStatisticsConfig.cpp
libgpopt/src/eval/: CConstExprEvaluatorDXL.cpp
libgpopt/src/mdcache/: CMDAccessor.cpp  CMDAccessorUtils.cpp  CMDCache.cpp  CMDKey.cpp
libgpopt/src/metadata/: CColumnDescriptor.cpp  CIndexDescriptor.cpp  CName.cpp  CPartConstraint.cpp  CTableDescriptor.cpp
libgpopt/src/minidump/: CDXLMinidump.cpp  CMetadataAccessorFactory.cpp  CMiniDumperDXL.cpp  CMinidumperUtils.cpp  CSerializableMDAccessor.cpp  CSerializableOptimizerConfig.cpp  CSerializablePlan.cpp  CSerializableQuery.cpp  CSerializableStackTrace.cpp
libgpopt/src/operators/: CExpression.cpp  CExpressionFactorizer.cpp  CExpressionHandle.cpp  CExpressionPreprocessor.cpp  CExpressionUtils.cpp  CHashedDistributions.cpp  CLogical.cpp  CLogicalApply.cpp  CLogicalAssert.cpp  CLogicalBitmapTableGet.cpp  CLogicalCTEAnchor.cpp  CLogicalCTEConsumer.cpp  CLogicalCTEProducer.cpp  CLogicalConstTableGet.cpp  CLogicalDML.cpp  CLogicalDelete.cpp  CLogicalDifference.cpp  CLogicalDifferenceAll.cpp  CLogicalDynamicBitmapTableGet.cpp  CLogicalDynamicGet.cpp  CLogicalDynamicGetBase.cpp  CLogicalDynamicIndexGet.cpp  CLogicalExternalGet.cpp  CLogicalFullOuterJoin.cpp  CLogicalGbAgg.cpp  CLogicalGbAggDeduplicate.cpp  CLogicalGet.cpp  CLogicalIndexApply.cpp  CLogicalIndexGet.cpp  CLogicalInnerApply.cpp  CLogicalInnerCorrelatedApply.cpp  CLogicalInnerJoin.cpp  CLogicalInsert.cpp  CLogicalIntersect.cpp  CLogicalIntersectAll.cpp  CLogicalJoin.cpp  CLogicalLeftAntiSemiApply.cpp  CLogicalLeftAntiSemiApplyNotIn.cpp  CLogicalLeftAntiSemiCorrelatedApply.cpp  CLogicalLeftAntiSemiCorrelatedApplyNotIn.cpp  (+129 more)
libgpopt/src/optimizer/: COptimizer.cpp  COptimizerConfig.cpp
libgpopt/src/search/: CBinding.cpp  CGroup.cpp  CGroupExpression.cpp  CGroupProxy.cpp  CJob.cpp  CJobFactory.cpp  CJobGroupExploration.cpp  CJobGroupExpression.cpp  CJobGroupExpressionExploration.cpp  CJobGroupExpressionImplementation.cpp  CJobGroupExpressionOptimization.cpp  CJobGroupImplementation.cpp  CJobGroupOptimization.cpp  CJobQueue.cpp  CJobTest.cpp  CJobTransformation.cpp  CMemo.cpp  CScheduler.cpp  CSchedulerContext.cpp  CSearchStage.cpp
libgpopt/src/translate/: CTranslatorDXLToExpr.cpp  CTranslatorDXLToExprUtils.cpp  CTranslatorExprToDXL.cpp  CTranslatorExprToDXLUtils.cpp
libgpopt/src/xforms/: CDecorrelator.cpp  CJoinOrder.cpp  CJoinOrderDP.cpp  CJoinOrderMinCard.cpp  CSubqueryHandler.cpp  CXform.cpp  CXformCTEAnchor2Sequence.cpp  CXformCTEAnchor2TrivialSelect.cpp  CXformCollapseGbAgg.cpp  CXformCollapseProject.cpp  CXformDelete2DML.cpp  CXformDifference2LeftAntiSemiJoin.cpp  CXformDifferenceAll2LeftAntiSemiJoin.cpp  CXformDynamicGet2DynamicTableScan.cpp  CXformDynamicIndexGet2DynamicIndexScan.cpp  CXformExpandFullOuterJoin.cpp  CXformExpandNAryJoin.cpp  CXformExpandNAryJoinDP.cpp  CXformExpandNAryJoinMinCard.cpp  CXformExternalGet2ExternalScan.cpp  CXformFactory.cpp  CXformGbAgg2Apply.cpp  CXformGbAgg2HashAgg.cpp  CXformGbAgg2ScalarAgg.cpp  CXformGbAgg2StreamAgg.cpp  CXformGbAggDedup2HashAggDedup.cpp  CXformGbAggDedup2StreamAggDedup.cpp  CXformGbAggWithMDQA2Join.cpp  CXformGet2TableScan.cpp  CXformImplementAssert.cpp  CXformImplementBitmapTableGet.cpp  CXformImplementCTEConsumer.cpp  CXformImplementCTEProducer.cpp  CXformImplementConstTableGet.cpp  CXformImplementDML.cpp  CXformImplementDynamicBitmapTableGet.cpp  CXformImplementLimit.cpp  CXformImplementPartitionSelector.cpp  CXformImplementRowTrigger.cpp  CXformImplementSequence.cpp  (+71 more)
libnaucrates/: CMakeLists.txt
libnaucrates/include/naucrates/: exception.h  init.h
libnaucrates/src/: CCostModelConfigSerializer.cpp  CDXLUtils.cpp  CIdGenerator.cpp  exception.cpp  init.cpp  traceflags.cpp
libnaucrates/src/base/: CDatumBoolGPDB.cpp  CDatumGenericGPDB.cpp  CDatumInt2GPDB.cpp  CDatumInt4GPDB.cpp  CDatumInt8GPDB.cpp  CDatumOidGPDB.cpp  CQueryToDXLResult.cpp  IDatumStatisticsMappable.cpp
libnaucrates/src/md/: CDXLBucket.cpp  CDXLColStats.cpp  CDXLRelStats.cpp  CDXLStatsDerivedColumn.cpp  CDXLStatsDerivedRelation.cpp  CMDAggregateGPDB.cpp  CMDArrayCoerceCastGPDB.cpp  CMDCastGPDB.cpp  CMDCheckConstraintGPDB.cpp  CMDColumn.cpp  CMDFunctionGPDB.cpp  CMDIdCast.cpp  CMDIdColStats.cpp  CMDIdGPDB.cpp  CMDIdGPDBCtas.cpp  CMDIdRelStats.cpp  CMDIdScCmp.cpp  CMDIndexGPDB.cpp  CMDIndexInfo.cpp  CMDName.cpp  CMDPartConstraintGPDB.cpp  CMDProviderGeneric.cpp  CMDProviderMemory.cpp  CMDRelationCtasGPDB.cpp  CMDRelationExternalGPDB.cpp  CMDRelationGPDB.cpp  CMDRequest.cpp  CMDScCmpGPDB.cpp  CMDScalarOpGPDB.cpp  CMDTriggerGPDB.cpp  CMDTypeBoolGPDB.cpp  CMDTypeGenericGPDB.cpp  CMDTypeInt2GPDB.cpp  CMDTypeInt4GPDB.cpp  CMDTypeInt8GPDB.cpp  CMDTypeOidGPDB.cpp  CSystemId.cpp  IMDCacheObject.cpp  IMDIndex.cpp  IMDProvider.cpp  (+2 more)
libnaucrates/src/operators/: CDXLColDescr.cpp  CDXLColRef.cpp  CDXLCtasStorageOptions.cpp  (+145 more)
(+1606 files in other folders)
