# Copyright (c) 2015, Pivotal Software, Inc. All Rights Reserved.

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpcost/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libnaucrates/include)

# Generate version-number header.
configure_file(version.h.in
	${PROJECT_BINARY_DIR}/libgpopt/include/libgpopt/version.h)

add_library(gpopt SHARED
            include/gpopt/base/CAutoOptCtxt.h
            include/gpopt/base/CColRef.h
            include/gpopt/base/CColRefComputed.h
            include/gpopt/base/CColRefSet.h
            include/gpopt/base/CColRefSetIter.h
            include/gpopt/base/CColRefTable.h
            include/gpopt/base/CColumnFactory.h
            include/gpopt/base/CConstraint.h
            include/gpopt/base/CConstraintConjunction.h
            include/gpopt/base/CConstraintDisjunction.h
            include/gpopt/base/CConstraintInterval.h
            include/gpopt/base/CConstraintNegation.h
            include/gpopt/base/CCostContext.h
            include/gpopt/base/CCTEInfo.h
            include/gpopt/base/CCTEMap.h
            include/gpopt/base/CCTEReq.h
            include/gpopt/base/CDefaultComparator.h
            include/gpopt/base/CDistributionSpec.h
            include/gpopt/base/CDistributionSpecAny.h
            include/gpopt/base/CDistributionSpecHashed.h
            include/gpopt/base/CDistributionSpecNonSingleton.h
            include/gpopt/base/CDistributionSpecRandom.h
            include/gpopt/base/CDistributionSpecReplicated.h
            include/gpopt/base/CDistributionSpecRouted.h
            include/gpopt/base/CDistributionSpecSingleton.h
            include/gpopt/base/CDistributionSpecStrictSingleton.h
            include/gpopt/base/CDistributionSpecUniversal.h
            include/gpopt/base/CDrvdProp.h
            include/gpopt/base/CDrvdPropCtxt.h
            include/gpopt/base/CDrvdPropCtxtPlan.h
            include/gpopt/base/CDrvdPropCtxtRelational.h
            include/gpopt/base/CDrvdPropCtxtScalar.h
            include/gpopt/base/CDrvdPropPlan.h
            include/gpopt/base/CDrvdPropRelational.h
            include/gpopt/base/CDrvdPropScalar.h
            include/gpopt/base/CEnfdDistribution.h
            include/gpopt/base/CEnfdOrder.h
            include/gpopt/base/CEnfdPartitionPropagation.h
            include/gpopt/base/CEnfdProp.h
            include/gpopt/base/CEnfdRewindability.h
            include/gpopt/base/CFunctionalDependency.h
            include/gpopt/base/CFunctionProp.h
            include/gpopt/base/CIOUtils.h
            include/gpopt/base/CKeyCollection.h
            include/gpopt/base/CMaxCard.h
            include/gpopt/base/COptCtxt.h
            include/gpopt/base/COptimizationContext.h
            include/gpopt/base/COrderSpec.h
            include/gpopt/base/CPartFilterMap.h
            include/gpopt/base/CPartIndexMap.h
            include/gpopt/base/CPartInfo.h
            include/gpopt/base/CPartitionPropagationSpec.h
            include/gpopt/base/CPartKeys.h
            include/gpopt/base/CPrintPrefix.h
            include/gpopt/base/CPropConstraint.h
            include/gpopt/base/CPropSpec.h
            include/gpopt/base/CQueryContext.h
            include/gpopt/base/CRange.h
            include/gpopt/base/CReqdProp.h
            include/gpopt/base/CReqdPropPlan.h
            include/gpopt/base/CReqdPropRelational.h
            include/gpopt/base/CRewindabilitySpec.h
            include/gpopt/base/CStateMachine.h
            include/gpopt/base/CStateMachine.inl
            include/gpopt/base/CStatsEquivClass.h
            include/gpopt/base/CUtils.h
            include/gpopt/base/CUtils.inl
            include/gpopt/base/CWindowFrame.h
            include/gpopt/base/IComparator.h
            include/gpopt/cost/CCost.h
            include/gpopt/cost/ICostModel.h
            include/gpopt/cost/ICostModelParams.h
            include/gpopt/engine/CCTEConfig.h
            include/gpopt/engine/CEngine.h
            include/gpopt/engine/CEnumeratorConfig.h
            include/gpopt/engine/CHint.h
            include/gpopt/engine/CPartialPlan.h
            include/gpopt/engine/CStatisticsConfig.h
            include/gpopt/eval/CConstExprEvaluatorDefault.h
            include/gpopt/eval/CConstExprEvaluatorDXL.h
            include/gpopt/eval/IConstDXLNodeEvaluator.h
            include/gpopt/eval/IConstExprEvaluator.h
            include/gpopt/exception.h
            include/gpopt/init.h
            include/gpopt/mdcache/CAutoMDAccessor.h
            include/gpopt/mdcache/CMDAccessor.h
            include/gpopt/mdcache/CMDAccessorUtils.h
            include/gpopt/mdcache/CMDCache.h
            include/gpopt/mdcache/CMDKey.h
            include/gpopt/metadata/CColumnDescriptor.h
            include/gpopt/metadata/CIndexDescriptor.h
            include/gpopt/metadata/CName.h
            include/gpopt/metadata/CPartConstraint.h
            include/gpopt/metadata/CTableDescriptor.h
            include/gpopt/minidump/CDXLMinidump.h
            include/gpopt/minidump/CMetadataAccessorFactory.h
            include/gpopt/minidump/CMiniDumperDXL.h
            include/gpopt/minidump/CMinidumperUtils.h
            include/gpopt/minidump/CSerializableMDAccessor.h
            include/gpopt/minidump/CSerializableOptimizerConfig.h
            include/gpopt/minidump/CSerializablePlan.h
            include/gpopt/minidump/CSerializableQuery.h
            include/gpopt/minidump/CSerializableStackTrace.h
            include/gpopt/operators/CCNFConverter.h
            include/gpopt/operators/CExpression.h
            include/gpopt/operators/CExpressionFactorizer.h
            include/gpopt/operators/CExpressionHandle.h
            include/gpopt/operators/CExpressionPreprocessor.h
            include/gpopt/operators/CExpressionUtils.h
            include/gpopt/operators/CLogical.h
            include/gpopt/operators/CLogicalApply.h
            include/gpopt/operators/CLogicalAssert.h
            include/gpopt/operators/CLogicalBitmapTableGet.h
            include/gpopt/operators/CLogicalConstTableGet.h
            include/gpopt/operators/CLogicalCTEAnchor.h
            include/gpopt/operators/CLogicalCTEConsumer.h
            include/gpopt/operators/CLogicalCTEProducer.h
            include/gpopt/operators/CLogicalDelete.h
            include/gpopt/operators/CLogicalDifference.h
            include/gpopt/operators/CLogicalDifferenceAll.h
            include/gpopt/operators/CLogicalDML.h
            include/gpopt/operators/CLogicalDynamicBitmapTableGet.h
            include/gpopt/operators/CLogicalDynamicGet.h
            include/gpopt/operators/CLogicalDynamicGetBase.h
            include/gpopt/operators/CLogicalDynamicIndexGet.h
            include/gpopt/operators/CLogicalExternalGet.h
            include/gpopt/operators/CLogicalFullOuterJoin.h
            include/gpopt/operators/CLogicalGbAgg.h
            include/gpopt/operators/CLogicalGbAggDeduplicate.h
            include/gpopt/operators/CLogicalGet.h
            include/gpopt/operators/CLogicalIndexGet.h
            include/gpopt/operators/CLogicalInnerApply.h
            include/gpopt/operators/CLogicalInnerCorrelatedApply.h
            include/gpopt/operators/CLogicalInnerIndexApply.h
            include/gpopt/operators/CLogicalInnerJoin.h
            include/gpopt/operators/CLogicalInsert.h
            include/gpopt/operators/CLogicalIntersect.h
            include/gpopt/operators/CLogicalIntersectAll.h
            include/gpopt/operators/CLogicalJoin.h
            include/gpopt/operators/CLogicalLeftAntiSemiApply.h
            include/gpopt/operators/CLogicalLeftAntiSemiApplyNotIn.h
            include/gpopt/operators/CLogicalLeftAntiSemiCorrelatedApply.h
            include/gpopt/operators/CLogicalLeftAntiSemiCorrelatedApplyNotIn.h
            include/gpopt/operators/CLogicalLeftAntiSemiJoin.h
            include/gpopt/operators/CLogicalLeftAntiSemiJoinNotIn.h
            include/gpopt/operators/CLogicalLeftOuterApply.h
            include/gpopt/operators/CLogicalLeftOuterCorrelatedApply.h
            include/gpopt/operators/CLogicalLeftOuterJoin.h
            include/gpopt/operators/CLogicalLeftSemiApply.h
            include/gpopt/operators/CLogicalLeftSemiApplyIn.h
            include/gpopt/operators/CLogicalLeftSemiCorrelatedApply.h
            include/gpopt/operators/CLogicalLeftSemiCorrelatedApplyIn.h
            include/gpopt/operators/CLogicalLeftSemiJoin.h
            include/gpopt/operators/CLogicalLimit.h
            include/gpopt/operators/CLogicalMaxOneRow.h
            include/gpopt/operators/CLogicalNAryJoin.h
            include/gpopt/operators/CLogicalPartitionSelector.h
            include/gpopt/operators/CLogicalProject.h
            include/gpopt/operators/CLogicalRowTrigger.h
            include/gpopt/operators/CLogicalSelect.h
            include/gpopt/operators/CLogicalSequence.h
            include/gpopt/operators/CLogicalSequenceProject.h
            include/gpopt/operators/CLogicalSetOp.h
            include/gpopt/operators/CLogicalSplit.h
            include/gpopt/operators/CLogicalTVF.h
            include/gpopt/operators/CLogicalUnary.h
            include/gpopt/operators/CLogicalUnion.h
            include/gpopt/operators/CLogicalUnionAll.h
            include/gpopt/operators/CLogicalUpdate.h
            include/gpopt/operators/CNormalizer.h
            include/gpopt/operators/COperator.h
            include/gpopt/operators/CPattern.h
            include/gpopt/operators/CPatternLeaf.h
            include/gpopt/operators/CPatternMultiLeaf.h
            include/gpopt/operators/CPatternMultiTree.h
            include/gpopt/operators/CPatternTree.h
            include/gpopt/operators/CPhysical.h
            include/gpopt/operators/CPhysicalAgg.h
            include/gpopt/operators/CPhysicalAssert.h
            include/gpopt/operators/CPhysicalBitmapTableScan.h
            include/gpopt/operators/CPhysicalComputeScalar.h
            include/gpopt/operators/CPhysicalConstTableGet.h
            include/gpopt/operators/CPhysicalCorrelatedInLeftSemiNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedInnerNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedLeftAntiSemiNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedLeftOuterNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedLeftSemiNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedNotInLeftAntiSemiNLJoin.h
            include/gpopt/operators/CPhysicalCTEConsumer.h
            include/gpopt/operators/CPhysicalCTEProducer.h
            include/gpopt/operators/CPhysicalDML.h
            include/gpopt/operators/CPhysicalDynamicBitmapTableScan.h
            include/gpopt/operators/CPhysicalDynamicIndexScan.h
            include/gpopt/operators/CPhysicalDynamicScan.h
            include/gpopt/operators/CPhysicalDynamicTableScan.h
            include/gpopt/operators/CPhysicalExternalScan.h
            include/gpopt/operators/CPhysicalFilter.h
            include/gpopt/operators/CPhysicalHashAgg.h
            include/gpopt/operators/CPhysicalHashAggDeduplicate.h
            include/gpopt/operators/CPhysicalHashJoin.h
            include/gpopt/operators/CPhysicalIndexScan.h
            include/gpopt/operators/CPhysicalInnerHashJoin.h
            include/gpopt/operators/CPhysicalInnerIndexNLJoin.h
            include/gpopt/operators/CPhysicalInnerNLJoin.h
            include/gpopt/operators/CPhysicalJoin.h
            include/gpopt/operators/CPhysicalLeftAntiSemiHashJoin.h
            include/gpopt/operators/CPhysicalLeftAntiSemiHashJoinNotIn.h
            include/gpopt/operators/CPhysicalLeftAntiSemiNLJoin.h
            include/gpopt/operators/CPhysicalLeftAntiSemiNLJoinNotIn.h
            include/gpopt/operators/CPhysicalLeftOuterHashJoin.h
            include/gpopt/operators/CPhysicalLeftOuterNLJoin.h
            include/gpopt/operators/CPhysicalLeftSemiHashJoin.h
            include/gpopt/operators/CPhysicalLeftSemiNLJoin.h
            include/gpopt/operators/CPhysicalLimit.h
            include/gpopt/operators/CPhysicalMotion.h
            include/gpopt/operators/CPhysicalMotionBroadcast.h
            include/gpopt/operators/CPhysicalMotionGather.h
            include/gpopt/operators/CPhysicalMotionHashDistribute.h
            include/gpopt/operators/CPhysicalMotionRandom.h
            include/gpopt/operators/CPhysicalMotionRoutedDistribute.h
            include/gpopt/operators/CPhysicalNLJoin.h
            include/gpopt/operators/CPhysicalPartitionSelector.h
            include/gpopt/operators/CPhysicalPartitionSelectorDML.h
            include/gpopt/operators/CPhysicalRowTrigger.h
            include/gpopt/operators/CPhysicalScalarAgg.h
            include/gpopt/operators/CPhysicalScan.h
            include/gpopt/operators/CPhysicalSequence.h
            include/gpopt/operators/CPhysicalSequenceProject.h
            include/gpopt/operators/CPhysicalSort.h
            include/gpopt/operators/CPhysicalSplit.h
            include/gpopt/operators/CPhysicalSpool.h
            include/gpopt/operators/CPhysicalStreamAgg.h
            include/gpopt/operators/CPhysicalStreamAggDeduplicate.h
            include/gpopt/operators/CPhysicalTableScan.h
            include/gpopt/operators/CPhysicalTVF.h
            include/gpopt/operators/CPhysicalUnionAll.h
            include/gpopt/operators/CPredicateUtils.h
            include/gpopt/operators/CScalar.h
            include/gpopt/operators/CScalarAggFunc.h
            include/gpopt/operators/CScalarArray.h
            include/gpopt/operators/CScalarArrayCmp.h
            include/gpopt/operators/CScalarArrayRef.h
            include/gpopt/operators/CScalarArrayRefIndexList.h
            include/gpopt/operators/CScalarAssertConstraint.h
            include/gpopt/operators/CScalarAssertConstraintList.h
            include/gpopt/operators/CScalarBitmapBoolOp.h
            include/gpopt/operators/CScalarBitmapIndexProbe.h
            include/gpopt/operators/CScalarBooleanTest.h
            include/gpopt/operators/CScalarBoolOp.h
            include/gpopt/operators/CScalarCaseTest.h
            include/gpopt/operators/CScalarCast.h
            include/gpopt/operators/CScalarCmp.h
            include/gpopt/operators/CScalarCoalesce.h
            include/gpopt/operators/CScalarCoerceToDomain.h
            include/gpopt/operators/CScalarCoerceViaIO.h
            include/gpopt/operators/CScalarConst.h
            include/gpopt/operators/CScalarDMLAction.h
            include/gpopt/operators/CScalarFunc.h
            include/gpopt/operators/CScalarIdent.h
            include/gpopt/operators/CScalarIf.h
            include/gpopt/operators/CScalarIsDistinctFrom.h
            include/gpopt/operators/CScalarMinMax.h
            include/gpopt/operators/CScalarNullIf.h
            include/gpopt/operators/CScalarNullTest.h
            include/gpopt/operators/CScalarOp.h
            include/gpopt/operators/CScalarProjectElement.h
            include/gpopt/operators/CScalarProjectList.h
            include/gpopt/operators/CScalarSubquery.h
            include/gpopt/operators/CScalarSubqueryAll.h
            include/gpopt/operators/CScalarSubqueryAny.h
            include/gpopt/operators/CScalarSubqueryExistential.h
            include/gpopt/operators/CScalarSubqueryExists.h
            include/gpopt/operators/CScalarSubqueryNotExists.h
            include/gpopt/operators/CScalarSubqueryQuantified.h
            include/gpopt/operators/CScalarSwitch.h
            include/gpopt/operators/CScalarSwitchCase.h
            include/gpopt/operators/CScalarWindowFunc.h
            include/gpopt/operators/CWindowPreprocessor.h
            include/gpopt/operators/ops.h
            include/gpopt/optimizer/COptimizer.h
            include/gpopt/optimizer/COptimizerConfig.h
            include/gpopt/search/CBinding.h
            include/gpopt/search/CGroup.h
            include/gpopt/search/CGroupExpression.h
            include/gpopt/search/CGroupProxy.h
            include/gpopt/search/CJob.h
            include/gpopt/search/CJobFactory.h
            include/gpopt/search/CJobGroup.h
            include/gpopt/search/CJobGroupExploration.h
            include/gpopt/search/CJobGroupExpression.h
            include/gpopt/search/CJobGroupExpressionExploration.h
            include/gpopt/search/CJobGroupExpressionImplementation.h
            include/gpopt/search/CJobGroupExpressionOptimization.h
            include/gpopt/search/CJobGroupImplementation.h
            include/gpopt/search/CJobGroupOptimization.h
            include/gpopt/search/CJobQueue.h
            include/gpopt/search/CJobStateMachine.h
            include/gpopt/search/CJobStateMachine.inl
            include/gpopt/search/CJobTest.h
            include/gpopt/search/CJobTransformation.h
            include/gpopt/search/CMemo.h
            include/gpopt/search/CScheduler.h
            include/gpopt/search/CSchedulerContext.h
            include/gpopt/search/CSearchStage.h
            include/gpopt/search/CTreeMap.h
            include/gpopt/search/CTreeMap.inl
            include/gpopt/spinlock.h
            include/gpopt/translate/CTranslatorDXLToExpr.h
            include/gpopt/translate/CTranslatorDXLToExprUtils.h
            include/gpopt/translate/CTranslatorExprToDXL.h
            include/gpopt/translate/CTranslatorExprToDXLUtils.h
            include/gpopt/xforms/CDecorrelator.h
            include/gpopt/xforms/CJoinOrder.h
            include/gpopt/xforms/CJoinOrderDP.h
            include/gpopt/xforms/CJoinOrderMinCard.h
            include/gpopt/xforms/CSubqueryHandler.h
            include/gpopt/xforms/CXform.h
            include/gpopt/xforms/CXformAntiSemiJoinAntiSemiJoinNotInSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinAntiSemiJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinInnerJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinNotInAntiSemiJoinNotInSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinNotInAntiSemiJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinNotInInnerJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinNotInSemiJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinSemiJoinSwap.h
            include/gpopt/xforms/CXformApply2Join.h
            include/gpopt/xforms/CXformApply2Join.inl
            include/gpopt/xforms/CXformCollapseGbAgg.h
            include/gpopt/xforms/CXformCollapseProject.h
            include/gpopt/xforms/CXformContext.h
            include/gpopt/xforms/CXformCTEAnchor2Sequence.h
            include/gpopt/xforms/CXformCTEAnchor2TrivialSelect.h
            include/gpopt/xforms/CXformDelete2DML.h
            include/gpopt/xforms/CXformDifference2LeftAntiSemiJoin.h
            include/gpopt/xforms/CXformDifferenceAll2LeftAntiSemiJoin.h
            include/gpopt/xforms/CXformDynamicGet2DynamicTableScan.h
            include/gpopt/xforms/CXformDynamicIndexGet2DynamicIndexScan.h
            include/gpopt/xforms/CXformExpandFullOuterJoin.h
            include/gpopt/xforms/CXformExpandNAryJoin.h
            include/gpopt/xforms/CXformExpandNAryJoinDP.h
            include/gpopt/xforms/CXformExpandNAryJoinMinCard.h
            include/gpopt/xforms/CXformExploration.h
            include/gpopt/xforms/CXformExternalGet2ExternalScan.h
            include/gpopt/xforms/CXformFactory.h
            include/gpopt/xforms/CXformGbAgg2Apply.h
            include/gpopt/xforms/CXformGbAgg2HashAgg.h
            include/gpopt/xforms/CXformGbAgg2ScalarAgg.h
            include/gpopt/xforms/CXformGbAgg2StreamAgg.h
            include/gpopt/xforms/CXformGbAggDedup2HashAggDedup.h
            include/gpopt/xforms/CXformGbAggDedup2StreamAggDedup.h
            include/gpopt/xforms/CXformGbAggWithMDQA2Join.h
            include/gpopt/xforms/CXformGet2TableScan.h
            include/gpopt/xforms/CXformImplementAssert.h
            include/gpopt/xforms/CXformImplementation.h
            include/gpopt/xforms/CXformImplementBitmapTableGet.h
            include/gpopt/xforms/CXformImplementConstTableGet.h
            include/gpopt/xforms/CXformImplementCorrelatedApply.h
            include/gpopt/xforms/CXformImplementCorrelatedApply.inl
            include/gpopt/xforms/CXformImplementCTEConsumer.h
            include/gpopt/xforms/CXformImplementCTEProducer.h
            include/gpopt/xforms/CXformImplementDML.h
            include/gpopt/xforms/CXformImplementDynamicBitmapTableGet.h
            include/gpopt/xforms/CXformImplementInnerCorrelatedApply.h
            include/gpopt/xforms/CXformImplementInnerIndexApply.h
            include/gpopt/xforms/CXformImplementLeftAntiSemiCorrelatedApply.h
            include/gpopt/xforms/CXformImplementLeftAntiSemiCorrelatedApplyNotIn.h
            include/gpopt/xforms/CXformImplementLeftOuterCorrelatedApply.h
            include/gpopt/xforms/CXformImplementLeftSemiCorrelatedApply.h
            include/gpopt/xforms/CXformImplementLeftSemiCorrelatedApplyIn.h
            include/gpopt/xforms/CXformImplementLimit.h
            include/gpopt/xforms/CXformImplementPartitionSelector.h
            include/gpopt/xforms/CXformImplementRowTrigger.h
            include/gpopt/xforms/CXformImplementSequence.h
            include/gpopt/xforms/CXformImplementSequenceProject.h
            include/gpopt/xforms/CXformImplementSplit.h
            include/gpopt/xforms/CXformImplementTVF.h
            include/gpopt/xforms/CXformImplementTVFNoArgs.h
            include/gpopt/xforms/CXformImplementUnionAll.h
            include/gpopt/xforms/CXformIndexGet2IndexScan.h
            include/gpopt/xforms/CXformInlineCTEConsumer.h
            include/gpopt/xforms/CXformInlineCTEConsumerUnderSelect.h
            include/gpopt/xforms/CXformInnerApply2InnerJoin.h
            include/gpopt/xforms/CXformInnerApply2InnerJoinNoCorrelations.h
            include/gpopt/xforms/CXformInnerApplyWithOuterKey2InnerJoin.h
            include/gpopt/xforms/CXformInnerJoin2BitmapIndexGetApply.h
            include/gpopt/xforms/CXformInnerJoin2DynamicBitmapIndexGetApply.h
            include/gpopt/xforms/CXformInnerJoin2DynamicIndexGetApply.h
            include/gpopt/xforms/CXformInnerJoin2HashJoin.h
            include/gpopt/xforms/CXformInnerJoin2IndexApply.h
            include/gpopt/xforms/CXformInnerJoin2IndexGetApply.h
            include/gpopt/xforms/CXformInnerJoin2NLJoin.h
            include/gpopt/xforms/CXformInnerJoin2PartialDynamicIndexGetApply.h
            include/gpopt/xforms/CXformInnerJoinAntiSemiJoinNotInSwap.h
            include/gpopt/xforms/CXformInnerJoinAntiSemiJoinSwap.h
            include/gpopt/xforms/CXformInnerJoinSemiJoinSwap.h
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2BitmapIndexGetApply.h
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2DynamicBitmapIndexGetApply.h
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2DynamicIndexGetApply.h
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2IndexGetApply.h
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2PartialDynamicIndexGetApply.h
            include/gpopt/xforms/CXformInsert2DML.h
            include/gpopt/xforms/CXformIntersect2Join.h
            include/gpopt/xforms/CXformIntersectAll2LeftSemiJoin.h
            include/gpopt/xforms/CXformJoinAssociativity.h
            include/gpopt/xforms/CXformJoinCommutativity.h
            include/gpopt/xforms/CXformJoinSwap.h
            include/gpopt/xforms/CXformJoinSwap.inl
            include/gpopt/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoin.h
            include/gpopt/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoinNoCorrelations.h
            include/gpopt/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotIn.h
            include/gpopt/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotInNoCorrelations.h
            include/gpopt/xforms/CXformLeftAntiSemiJoin2CrossProduct.h
            include/gpopt/xforms/CXformLeftAntiSemiJoin2HashJoin.h
            include/gpopt/xforms/CXformLeftAntiSemiJoin2NLJoin.h
            include/gpopt/xforms/CXformLeftAntiSemiJoinNotIn2CrossProduct.h
            include/gpopt/xforms/CXformLeftAntiSemiJoinNotIn2HashJoinNotIn.h
            include/gpopt/xforms/CXformLeftAntiSemiJoinNotIn2NLJoinNotIn.h
            include/gpopt/xforms/CXformLeftOuter2InnerUnionAllLeftAntiSemiJoin.h
            include/gpopt/xforms/CXformLeftOuterApply2LeftOuterJoin.h
            include/gpopt/xforms/CXformLeftOuterApply2LeftOuterJoinNoCorrelations.h
            include/gpopt/xforms/CXformLeftOuterJoin2HashJoin.h
            include/gpopt/xforms/CXformLeftOuterJoin2NLJoin.h
            include/gpopt/xforms/CXformLeftSemiApply2LeftSemiJoin.h
            include/gpopt/xforms/CXformLeftSemiApply2LeftSemiJoinNoCorrelations.h
            include/gpopt/xforms/CXformLeftSemiApplyIn2LeftSemiJoin.h
            include/gpopt/xforms/CXformLeftSemiApplyIn2LeftSemiJoinNoCorrelations.h
            include/gpopt/xforms/CXformLeftSemiApplyInWithExternalCorrs2InnerJoin.h
            include/gpopt/xforms/CXformLeftSemiApplyWithExternalCorrs2InnerJoin.h
            include/gpopt/xforms/CXformLeftSemiJoin2CrossProduct.h
            include/gpopt/xforms/CXformLeftSemiJoin2HashJoin.h
            include/gpopt/xforms/CXformLeftSemiJoin2InnerJoin.h
            include/gpopt/xforms/CXformLeftSemiJoin2InnerJoinUnderGb.h
            include/gpopt/xforms/CXformLeftSemiJoin2NLJoin.h
            include/gpopt/xforms/CXformMaxOneRow2Assert.h
            include/gpopt/xforms/CXformProject2Apply.h
            include/gpopt/xforms/CXformProject2ComputeScalar.h
            include/gpopt/xforms/CXformPushDownLeftOuterJoin.h
            include/gpopt/xforms/CXformPushGbBelowJoin.h
            include/gpopt/xforms/CXformPushGbBelowSetOp.h
            include/gpopt/xforms/CXformPushGbBelowSetOp.inl
            include/gpopt/xforms/CXformPushGbBelowUnion.h
            include/gpopt/xforms/CXformPushGbBelowUnionAll.h
            include/gpopt/xforms/CXformPushGbDedupBelowJoin.h
            include/gpopt/xforms/CXformPushGbWithHavingBelowJoin.h
            include/gpopt/xforms/CXformResult.h
            include/gpopt/xforms/CXformSelect2Apply.h
            include/gpopt/xforms/CXformSelect2BitmapBoolOp.h
            include/gpopt/xforms/CXformSelect2DynamicBitmapBoolOp.h
            include/gpopt/xforms/CXformSelect2DynamicIndexGet.h
            include/gpopt/xforms/CXformSelect2Filter.h
            include/gpopt/xforms/CXformSelect2IndexGet.h
            include/gpopt/xforms/CXformSelect2PartialDynamicIndexGet.h
            include/gpopt/xforms/CXformSemiJoinAntiSemiJoinNotInSwap.h
            include/gpopt/xforms/CXformSemiJoinAntiSemiJoinSwap.h
            include/gpopt/xforms/CXformSemiJoinInnerJoinSwap.h
            include/gpopt/xforms/CXformSemiJoinSemiJoinSwap.h
            include/gpopt/xforms/CXformSequenceProject2Apply.h
            include/gpopt/xforms/CXformSimplifyGbAgg.h
            include/gpopt/xforms/CXformSimplifyLeftOuterJoin.h
            include/gpopt/xforms/CXformSimplifyProjectWithSubquery.h
            include/gpopt/xforms/CXformSimplifySelectWithSubquery.h
            include/gpopt/xforms/CXformSimplifySubquery.h
            include/gpopt/xforms/CXformSplitDQA.h
            include/gpopt/xforms/CXformSplitGbAgg.h
            include/gpopt/xforms/CXformSplitGbAggDedup.h
            include/gpopt/xforms/CXformSplitLimit.h
            include/gpopt/xforms/CXformSubqJoin2Apply.h
            include/gpopt/xforms/CXformSubqNAryJoin2Apply.h
            include/gpopt/xforms/CXformSubqueryUnnest.h
            include/gpopt/xforms/CXformUnion2UnionAll.h
            include/gpopt/xforms/CXformUnnestTVF.h
            include/gpopt/xforms/CXformUpdate2DML.h
            include/gpopt/xforms/CXformUtils.h
            include/gpopt/xforms/CXformUtils.inl
            include/gpopt/xforms/xforms.h

            src/base/CAutoOptCtxt.cpp
            src/base/CColRef.cpp
            src/base/CColRefComputed.cpp
            src/base/CColRefSet.cpp
            src/base/CColRefSetIter.cpp
            src/base/CColRefTable.cpp
            src/base/CColumnFactory.cpp
            src/base/CConstraint.cpp
            src/base/CConstraintConjunction.cpp
            src/base/CConstraintDisjunction.cpp
            src/base/CConstraintInterval.cpp
            src/base/CConstraintNegation.cpp
            src/base/CCostContext.cpp
            src/base/CCTEInfo.cpp
            src/base/CCTEMap.cpp
            src/base/CCTEReq.cpp
            src/base/CDefaultComparator.cpp
            src/base/CDistributionSpecHashed.cpp
            src/base/CDistributionSpecNonSingleton.cpp
            src/base/CDistributionSpecRandom.cpp
            src/base/CDistributionSpecReplicated.cpp
            src/base/CDistributionSpecRouted.cpp
            src/base/CDistributionSpecSingleton.cpp
            src/base/CDistributionSpecStrictSingleton.cpp
            src/base/CDrvdProp.cpp
            src/base/CDrvdPropCtxt.cpp
            src/base/CDrvdPropCtxtPlan.cpp
            src/base/CDrvdPropPlan.cpp
            src/base/CDrvdPropRelational.cpp
            src/base/CDrvdPropScalar.cpp
            src/base/CEnfdDistribution.cpp
            src/base/CEnfdOrder.cpp
            src/base/CEnfdPartitionPropagation.cpp
            src/base/CEnfdProp.cpp
            src/base/CEnfdRewindability.cpp
            src/base/CFunctionalDependency.cpp
            src/base/CFunctionProp.cpp
            src/base/CIOUtils.cpp
            src/base/CKeyCollection.cpp
            src/base/COptCtxt.cpp
            src/base/COptimizationContext.cpp
            src/base/COrderSpec.cpp
            src/base/CPartFilterMap.cpp
            src/base/CPartIndexMap.cpp
            src/base/CPartInfo.cpp
            src/base/CPartitionPropagationSpec.cpp
            src/base/CPartKeys.cpp
            src/base/CPrintPrefix.cpp
            src/base/CPropConstraint.cpp
            src/base/CQueryContext.cpp
            src/base/CRange.cpp
            src/base/CReqdProp.cpp
            src/base/CReqdPropPlan.cpp
            src/base/CReqdPropRelational.cpp
            src/base/CRewindabilitySpec.cpp
            src/base/CStatsEquivClass.cpp
            src/base/CUtils.cpp
            src/base/CWindowFrame.cpp
            src/engine/CEngine.cpp
            src/engine/CEnumeratorConfig.cpp
            src/engine/CPartialPlan.cpp
            src/engine/CStatisticsConfig.cpp
            src/eval/CConstExprEvaluatorDefault.cpp
            src/eval/CConstExprEvaluatorDXL.cpp
            src/exception.cpp
            src/init.cpp
            src/mdcache/CMDAccessor.cpp
            src/mdcache/CMDAccessorUtils.cpp
            src/mdcache/CMDCache.cpp
            src/mdcache/CMDKey.cpp
            src/metadata/CColumnDescriptor.cpp
            src/metadata/CIndexDescriptor.cpp
            src/metadata/CName.cpp
            src/metadata/CPartConstraint.cpp
            src/metadata/CTableDescriptor.cpp
            src/minidump/CDXLMinidump.cpp
            src/minidump/CMetadataAccessorFactory.cpp
            src/minidump/CMiniDumperDXL.cpp
            src/minidump/CMinidumperUtils.cpp
            src/minidump/CSerializableMDAccessor.cpp
            src/minidump/CSerializableOptimizerConfig.cpp
            src/minidump/CSerializablePlan.cpp
            src/minidump/CSerializableQuery.cpp
            src/minidump/CSerializableStackTrace.cpp
            src/operators/CCNFConverter.cpp
            src/operators/CExpression.cpp
            src/operators/CExpressionFactorizer.cpp
            src/operators/CExpressionHandle.cpp
            src/operators/CExpressionPreprocessor.cpp
            src/operators/CExpressionUtils.cpp
            src/operators/CLogical.cpp
            src/operators/CLogicalApply.cpp
            src/operators/CLogicalAssert.cpp
            src/operators/CLogicalBitmapTableGet.cpp
            src/operators/CLogicalConstTableGet.cpp
            src/operators/CLogicalCTEAnchor.cpp
            src/operators/CLogicalCTEConsumer.cpp
            src/operators/CLogicalCTEProducer.cpp
            src/operators/CLogicalDelete.cpp
            src/operators/CLogicalDifference.cpp
            src/operators/CLogicalDifferenceAll.cpp
            src/operators/CLogicalDML.cpp
            src/operators/CLogicalDynamicBitmapTableGet.cpp
            src/operators/CLogicalDynamicGet.cpp
            src/operators/CLogicalDynamicGetBase.cpp
            src/operators/CLogicalDynamicIndexGet.cpp
            src/operators/CLogicalExternalGet.cpp
            src/operators/CLogicalFullOuterJoin.cpp
            src/operators/CLogicalGbAgg.cpp
            src/operators/CLogicalGbAggDeduplicate.cpp
            src/operators/CLogicalGet.cpp
            src/operators/CLogicalIndexGet.cpp
            src/operators/CLogicalInnerApply.cpp
            src/operators/CLogicalInnerCorrelatedApply.cpp
            src/operators/CLogicalInnerIndexApply.cpp
            src/operators/CLogicalInnerJoin.cpp
            src/operators/CLogicalInsert.cpp
            src/operators/CLogicalIntersect.cpp
            src/operators/CLogicalIntersectAll.cpp
            src/operators/CLogicalJoin.cpp
            src/operators/CLogicalLeftAntiSemiApply.cpp
            src/operators/CLogicalLeftAntiSemiApplyNotIn.cpp
            src/operators/CLogicalLeftAntiSemiCorrelatedApply.cpp
            src/operators/CLogicalLeftAntiSemiCorrelatedApplyNotIn.cpp
            src/operators/CLogicalLeftAntiSemiJoin.cpp
            src/operators/CLogicalLeftAntiSemiJoinNotIn.cpp
            src/operators/CLogicalLeftOuterApply.cpp
            src/operators/CLogicalLeftOuterCorrelatedApply.cpp
            src/operators/CLogicalLeftOuterJoin.cpp
            src/operators/CLogicalLeftSemiApply.cpp
            src/operators/CLogicalLeftSemiApplyIn.cpp
            src/operators/CLogicalLeftSemiCorrelatedApply.cpp
            src/operators/CLogicalLeftSemiCorrelatedApplyIn.cpp
            src/operators/CLogicalLeftSemiJoin.cpp
            src/operators/CLogicalLimit.cpp
            src/operators/CLogicalMaxOneRow.cpp
            src/operators/CLogicalNAryJoin.cpp
            src/operators/CLogicalPartitionSelector.cpp
            src/operators/CLogicalProject.cpp
            src/operators/CLogicalRowTrigger.cpp
            src/operators/CLogicalSelect.cpp
            src/operators/CLogicalSequence.cpp
            src/operators/CLogicalSequenceProject.cpp
            src/operators/CLogicalSetOp.cpp
            src/operators/CLogicalSplit.cpp
            src/operators/CLogicalTVF.cpp
            src/operators/CLogicalUnary.cpp
            src/operators/CLogicalUnion.cpp
            src/operators/CLogicalUnionAll.cpp
            src/operators/CLogicalUpdate.cpp
            src/operators/CNormalizer.cpp
            src/operators/COperator.cpp
            src/operators/CPattern.cpp
            src/operators/CPhysical.cpp
            src/operators/CPhysicalAgg.cpp
            src/operators/CPhysicalAssert.cpp
            src/operators/CPhysicalBitmapTableScan.cpp
            src/operators/CPhysicalComputeScalar.cpp
            src/operators/CPhysicalConstTableGet.cpp
            src/operators/CPhysicalCTEConsumer.cpp
            src/operators/CPhysicalCTEProducer.cpp
            src/operators/CPhysicalDML.cpp
            src/operators/CPhysicalDynamicBitmapTableScan.cpp
            src/operators/CPhysicalDynamicIndexScan.cpp
            src/operators/CPhysicalDynamicScan.cpp
            src/operators/CPhysicalDynamicTableScan.cpp
            src/operators/CPhysicalExternalScan.cpp
            src/operators/CPhysicalFilter.cpp
            src/operators/CPhysicalHashAgg.cpp
            src/operators/CPhysicalHashAggDeduplicate.cpp
            src/operators/CPhysicalHashJoin.cpp
            src/operators/CPhysicalIndexScan.cpp
            src/operators/CPhysicalInnerHashJoin.cpp
            src/operators/CPhysicalInnerIndexNLJoin.cpp
            src/operators/CPhysicalInnerNLJoin.cpp
            src/operators/CPhysicalJoin.cpp
            src/operators/CPhysicalLeftAntiSemiHashJoin.cpp
            src/operators/CPhysicalLeftAntiSemiHashJoinNotIn.cpp
            src/operators/CPhysicalLeftAntiSemiNLJoin.cpp
            src/operators/CPhysicalLeftOuterHashJoin.cpp
            src/operators/CPhysicalLeftOuterNLJoin.cpp
            src/operators/CPhysicalLeftSemiHashJoin.cpp
            src/operators/CPhysicalLeftSemiNLJoin.cpp
            src/operators/CPhysicalLimit.cpp
            src/operators/CPhysicalMotion.cpp
            src/operators/CPhysicalMotionBroadcast.cpp
            src/operators/CPhysicalMotionGather.cpp
            src/operators/CPhysicalMotionHashDistribute.cpp
            src/operators/CPhysicalMotionRandom.cpp
            src/operators/CPhysicalMotionRoutedDistribute.cpp
            src/operators/CPhysicalNLJoin.cpp
            src/operators/CPhysicalPartitionSelector.cpp
            src/operators/CPhysicalPartitionSelectorDML.cpp
            src/operators/CPhysicalRowTrigger.cpp
            src/operators/CPhysicalScalarAgg.cpp
            src/operators/CPhysicalScan.cpp
            src/operators/CPhysicalSequence.cpp
            src/operators/CPhysicalSequenceProject.cpp
            src/operators/CPhysicalSort.cpp
            src/operators/CPhysicalSplit.cpp
            src/operators/CPhysicalSpool.cpp
            src/operators/CPhysicalStreamAgg.cpp
            src/operators/CPhysicalStreamAggDeduplicate.cpp
            src/operators/CPhysicalTableScan.cpp
            src/operators/CPhysicalTVF.cpp
            src/operators/CPhysicalUnionAll.cpp
            src/operators/CPredicateUtils.cpp
            src/operators/CScalar.cpp
            src/operators/CScalarAggFunc.cpp
            src/operators/CScalarArray.cpp
            src/operators/CScalarArrayCmp.cpp
            src/operators/CScalarArrayRef.cpp
            src/operators/CScalarArrayRefIndexList.cpp
            src/operators/CScalarAssertConstraint.cpp
            src/operators/CScalarAssertConstraintList.cpp
            src/operators/CScalarBitmapBoolOp.cpp
            src/operators/CScalarBitmapIndexProbe.cpp
            src/operators/CScalarBooleanTest.cpp
            src/operators/CScalarBoolOp.cpp
            src/operators/CScalarCaseTest.cpp
            src/operators/CScalarCast.cpp
            src/operators/CScalarCmp.cpp
            src/operators/CScalarCoalesce.cpp
            src/operators/CScalarCoerceToDomain.cpp
            src/operators/CScalarCoerceViaIO.cpp
            src/operators/CScalarConst.cpp
            src/operators/CScalarDMLAction.cpp
            src/operators/CScalarFunc.cpp
            src/operators/CScalarIdent.cpp
            src/operators/CScalarIf.cpp
            src/operators/CScalarMinMax.cpp
            src/operators/CScalarNullIf.cpp
            src/operators/CScalarNullTest.cpp
            src/operators/CScalarOp.cpp
            src/operators/CScalarProjectElement.cpp
            src/operators/CScalarProjectList.cpp
            src/operators/CScalarSubquery.cpp
            src/operators/CScalarSubqueryAll.cpp
            src/operators/CScalarSubqueryAny.cpp
            src/operators/CScalarSubqueryExistential.cpp
            src/operators/CScalarSubqueryQuantified.cpp
            src/operators/CScalarSwitch.cpp
            src/operators/CScalarSwitchCase.cpp
            src/operators/CScalarWindowFunc.cpp
            src/operators/CWindowPreprocessor.cpp
            src/optimizer/COptimizer.cpp
            src/optimizer/COptimizerConfig.cpp
            src/search/CBinding.cpp
            src/search/CGroup.cpp
            src/search/CGroupExpression.cpp
            src/search/CGroupProxy.cpp
            src/search/CJob.cpp
            src/search/CJobFactory.cpp
            src/search/CJobGroup.cpp
            src/search/CJobGroupExploration.cpp
            src/search/CJobGroupExpression.cpp
            src/search/CJobGroupExpressionExploration.cpp
            src/search/CJobGroupExpressionImplementation.cpp
            src/search/CJobGroupExpressionOptimization.cpp
            src/search/CJobGroupImplementation.cpp
            src/search/CJobGroupOptimization.cpp
            src/search/CJobQueue.cpp
            src/search/CJobTest.cpp
            src/search/CJobTransformation.cpp
            src/search/CMemo.cpp
            src/search/CScheduler.cpp
            src/search/CSchedulerContext.cpp
            src/search/CSearchStage.cpp
            src/translate/CTranslatorDXLToExpr.cpp
            src/translate/CTranslatorDXLToExprUtils.cpp
            src/translate/CTranslatorExprToDXL.cpp
            src/translate/CTranslatorExprToDXLUtils.cpp
            src/xforms/CDecorrelator.cpp
            src/xforms/CJoinOrder.cpp
            src/xforms/CJoinOrderDP.cpp
            src/xforms/CJoinOrderMinCard.cpp
            src/xforms/CSubqueryHandler.cpp
            src/xforms/CXform.cpp
            src/xforms/CXformCollapseGbAgg.cpp
            src/xforms/CXformCollapseProject.cpp
            src/xforms/CXformCTEAnchor2Sequence.cpp
            src/xforms/CXformCTEAnchor2TrivialSelect.cpp
            src/xforms/CXformDelete2DML.cpp
            src/xforms/CXformDifference2LeftAntiSemiJoin.cpp
            src/xforms/CXformDifferenceAll2LeftAntiSemiJoin.cpp
            src/xforms/CXformDynamicGet2DynamicTableScan.cpp
            src/xforms/CXformDynamicIndexGet2DynamicIndexScan.cpp
            src/xforms/CXformExpandFullOuterJoin.cpp
            src/xforms/CXformExpandNAryJoin.cpp
            src/xforms/CXformExpandNAryJoinDP.cpp
            src/xforms/CXformExpandNAryJoinMinCard.cpp
            src/xforms/CXformExploration.cpp
            src/xforms/CXformExternalGet2ExternalScan.cpp
            src/xforms/CXformFactory.cpp
            src/xforms/CXformGbAgg2Apply.cpp
            src/xforms/CXformGbAgg2HashAgg.cpp
            src/xforms/CXformGbAgg2ScalarAgg.cpp
            src/xforms/CXformGbAgg2StreamAgg.cpp
            src/xforms/CXformGbAggDedup2HashAggDedup.cpp
            src/xforms/CXformGbAggDedup2StreamAggDedup.cpp
            src/xforms/CXformGbAggWithMDQA2Join.cpp
            src/xforms/CXformGet2TableScan.cpp
            src/xforms/CXformImplementAssert.cpp
            src/xforms/CXformImplementation.cpp
            src/xforms/CXformImplementBitmapTableGet.cpp
            src/xforms/CXformImplementConstTableGet.cpp
            src/xforms/CXformImplementCTEConsumer.cpp
            src/xforms/CXformImplementCTEProducer.cpp
            src/xforms/CXformImplementDML.cpp
            src/xforms/CXformImplementDynamicBitmapTableGet.cpp
            src/xforms/CXformImplementInnerIndexApply.cpp
            src/xforms/CXformImplementLimit.cpp
            src/xforms/CXformImplementPartitionSelector.cpp
            src/xforms/CXformImplementRowTrigger.cpp
            src/xforms/CXformImplementSequence.cpp
            src/xforms/CXformImplementSequenceProject.cpp
            src/xforms/CXformImplementSplit.cpp
            src/xforms/CXformImplementTVF.cpp
            src/xforms/CXformImplementTVFNoArgs.cpp
            src/xforms/CXformImplementUnionAll.cpp
            src/xforms/CXformIndexGet2IndexScan.cpp
            src/xforms/CXformInlineCTEConsumer.cpp
            src/xforms/CXformInlineCTEConsumerUnderSelect.cpp
            src/xforms/CXformInnerApply2InnerJoin.cpp
            src/xforms/CXformInnerApply2InnerJoinNoCorrelations.cpp
            src/xforms/CXformInnerApplyWithOuterKey2InnerJoin.cpp
            src/xforms/CXformInnerJoin2BitmapIndexGetApply.cpp
            src/xforms/CXformInnerJoin2DynamicBitmapIndexGetApply.cpp
            src/xforms/CXformInnerJoin2DynamicIndexGetApply.cpp
            src/xforms/CXformInnerJoin2HashJoin.cpp
            src/xforms/CXformInnerJoin2IndexApply.cpp
            src/xforms/CXformInnerJoin2IndexGetApply.cpp
            src/xforms/CXformInnerJoin2NLJoin.cpp
            src/xforms/CXformInnerJoin2PartialDynamicIndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2BitmapIndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2DynamicBitmapIndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2DynamicIndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2IndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2PartialDynamicIndexGetApply.cpp
            src/xforms/CXformInsert2DML.cpp
            src/xforms/CXformIntersect2Join.cpp
            src/xforms/CXformIntersectAll2LeftSemiJoin.cpp
            src/xforms/CXformJoinAssociativity.cpp
            src/xforms/CXformJoinCommutativity.cpp
            src/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoin.cpp
            src/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoinNoCorrelations.cpp
            src/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotIn.cpp
            src/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotInNoCorrelations.cpp
            src/xforms/CXformLeftAntiSemiJoin2CrossProduct.cpp
            src/xforms/CXformLeftAntiSemiJoin2HashJoin.cpp
            src/xforms/CXformLeftAntiSemiJoin2NLJoin.cpp
            src/xforms/CXformLeftAntiSemiJoinNotIn2HashJoinNotIn.cpp
            src/xforms/CXformLeftAntiSemiJoinNotIn2NLJoinNotIn.cpp
            src/xforms/CXformLeftOuter2InnerUnionAllLeftAntiSemiJoin.cpp
            src/xforms/CXformLeftOuterApply2LeftOuterJoin.cpp
            src/xforms/CXformLeftOuterApply2LeftOuterJoinNoCorrelations.cpp
            src/xforms/CXformLeftOuterJoin2HashJoin.cpp
            src/xforms/CXformLeftOuterJoin2NLJoin.cpp
            src/xforms/CXformLeftSemiApply2LeftSemiJoin.cpp
            src/xforms/CXformLeftSemiApply2LeftSemiJoinNoCorrelations.cpp
            src/xforms/CXformLeftSemiApplyWithExternalCorrs2InnerJoin.cpp
            src/xforms/CXformLeftSemiJoin2CrossProduct.cpp
            src/xforms/CXformLeftSemiJoin2HashJoin.cpp
            src/xforms/CXformLeftSemiJoin2InnerJoin.cpp
            src/xforms/CXformLeftSemiJoin2InnerJoinUnderGb.cpp
            src/xforms/CXformLeftSemiJoin2NLJoin.cpp
            src/xforms/CXformMaxOneRow2Assert.cpp
            src/xforms/CXformProject2Apply.cpp
            src/xforms/CXformProject2ComputeScalar.cpp
            src/xforms/CXformPushDownLeftOuterJoin.cpp
            src/xforms/CXformPushGbBelowJoin.cpp
            src/xforms/CXformPushGbDedupBelowJoin.cpp
            src/xforms/CXformPushGbWithHavingBelowJoin.cpp
            src/xforms/CXformResult.cpp
            src/xforms/CXformSelect2Apply.cpp
            src/xforms/CXformSelect2BitmapBoolOp.cpp
            src/xforms/CxformSelect2DynamicBitmapBoolOp.cpp
            src/xforms/CXformSelect2DynamicIndexGet.cpp
            src/xforms/CXformSelect2Filter.cpp
            src/xforms/CXformSelect2IndexGet.cpp
            src/xforms/CXformSelect2PartialDynamicIndexGet.cpp
            src/xforms/CXformSequenceProject2Apply.cpp
            src/xforms/CXformSimplifyGbAgg.cpp
            src/xforms/CXformSimplifyLeftOuterJoin.cpp
            src/xforms/CXformSimplifySubquery.cpp
            src/xforms/CXformSplitDQA.cpp
            src/xforms/CXformSplitGbAgg.cpp
            src/xforms/CXformSplitGbAggDedup.cpp
            src/xforms/CXformSplitLimit.cpp
            src/xforms/CXformSubqJoin2Apply.cpp
            src/xforms/CXformSubqueryUnnest.cpp
            src/xforms/CXformUnion2UnionAll.cpp
            src/xforms/CXformUnnestTVF.cpp
            src/xforms/CXformUpdate2DML.cpp
            src/xforms/CXformUtils.cpp
            )

target_link_libraries(gpopt
                      gpdbcost
                      naucrates
                      ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS}
                      ${GPOS_LIBRARIES}
                      ${XERCES_LIBRARIES}
                      ${GPORCA_SOLARIS_EXTRA_LIBS})

set_target_properties(gpopt PROPERTIES
                      SOVERSION ${GPORCA_ABI_VERSION}
                      VERSION ${GPORCA_VERSION_STRING})

install(TARGETS gpopt DESTINATION lib)
install(DIRECTORY include/gpopt DESTINATION include)
install(FILES "${PROJECT_BINARY_DIR}/libgpopt/include/libgpopt/version.h"
        DESTINATION include/gpopt)
